force-app/main/default/objects/Fee__c/Fee__c.object-meta.xml
<CustomObject>
    <label>Fee</label>
    <nameField>
        <label>Fee Term</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>