force-app/main/default/objects/Fee__c/fields/Fee_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Due_Date__c</fullName>
    <label>Fee Due Date</label>
    <type>Date</type>
</CustomField>