force-app/main/default/objects/Fee__c/fields/Fee_Payment__c.field-meta.xml
<CustomField>
    <fullName>Fee_Payment__c</fullName>
    <label>Fee Payment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Due</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>