force-app/main/default/objects/Fee__c/fields/Hostel_Fee__c.field-meta.xml
<CustomField>
    <fullName>Hostel_Fee__c</fullName>
    <label>Hostel Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>