force-app/main/default/objects/Fee__c/fields/StudentFee__c.field-meta.xml
<CustomField>
    <fullName>StudentFee__c</fullName>
    <label>StudentFee</label>
    <referenceTo>Student__c</referenceTo>
    <relationshipLabel>Fees</relationshipLabel>
    <relationshipName>Fees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>