force-app/main/default/objects/Fee__c/fields/TotalFee__c.field-meta.xml
<CustomField>
    <fullName>TotalFee__c</fullName>
    <formula>Hostel_Fee__c  +  Tution_Fee__c  +  Transportation_Fee__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TotalFee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>