force-app/main/default/objects/Fee__c/fields/Transportation_Fee__c.field-meta.xml
<CustomField>
    <fullName>Transportation_Fee__c</fullName>
    <label>Transportation Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>