force-app/main/default/objects/Fee__c/fields/Tution_Fee__c.field-meta.xml
<CustomField>
    <fullName>Tution_Fee__c</fullName>
    <label>Tution Fee</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>