force-app/main/default/objects/Fee__c/validationRules/Hostel_Fee.validationRule-meta.xml
<ValidationRule>
    <fullName>Hostel_Fee</fullName>
    <active>false</active>
    <errorConditionFormula>AND(  $ObjectType.Student__c.Fields.Hostel__c = TRUE , ISBLANK( Hostel_Fee__c ) )</errorConditionFormula>
    <errorMessage>We should enter Hostel Fee only</errorMessage>
</ValidationRule>