force-app/main/default/objects/Fee__c/validationRules/Hostel_Or_Transportation.validationRule-meta.xml
<ValidationRule>
    <fullName>Hostel_Or_Transportation</fullName>
    <active>false</active>
    <errorConditionFormula>OR( ISBLANK(  Hostel_Fee__c  )  &amp;&amp;  ISBLANK(  Transportation_Fee__c  ), NOT( ISBLANK(Hostel_Fee__c ) )&amp;&amp;  NOT(ISBLANK(Transportation_Fee__c  ) ) )</errorConditionFormula>
    <errorMessage>We Should enter any one Fee Among Hostel Fee and Transportation Fee</errorMessage>
</ValidationRule>